[package]
name = "crabby_careers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio={version="1.17.0", features=["macros", "rt-multi-thread"]}
reqwest = "0.11.10"
regex = "1"
fancy-regex = "0.8.0"
rocket = {version = "0.5.0-rc.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"
